--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
   "description": "",
   "devDependencies": {
     "@types/node": "^22.10.1",
-    "prisma": "^6.0.1",
+    "prisma": "^6.1.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.2"
   },
   "dependencies": {
-    "@prisma/client": "^6.0.1",
+    "@prisma/client": "^6.1.0",
     "@types/express": "^5.0.0",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2"
   }
 }
